# xwing_riot

./: CMakeLists.txt  params.h  xkem.c  xkem.h
dhkem/: derivekeypair.c  extractexpand.c  kem.c
ed255/: x25519.c  x25519.h
ghpc/: gkem.c
mlkem/: cbd.c  ntt.c  poly.c  poly.h  polyvec.h  reduce.c  symmetric.h
test/: test_speed.c  test_xkem_functionality.c
x25519/lib25519-20240321/: use-s2n-bignum
x25519/lib25519-20240321/.reuse/: dep5
x25519/lib25519-20240321/autogen/: cli  html  html-files  html-style  html-title  man  md-speed  md-speed-bot  md-speed-top  speed  test
x25519/lib25519-20240321/benchmarks/: a53-pi3aplus  a72-pi4b  airmont-nucnuc  broadwell-shoe  core2-moutonrothschild  firestorm-cfarm104  goldencove-alder  goldmont-wooden  haswell-titan0  skylake-samba  tigerlake-panther  zen2-rome1  zen3-cezanne
x25519/lib25519-20240321/benchmarks+s2n/: a53-pi3aplus  a72-pi4b  airmont-nucnuc  broadwell-shoe  core2-moutonrothschild  firestorm-cfarm104  goldencove-alder  goldmont-wooden  haswell-titan0  skylake-samba  tigerlake-panther  zen2-rome1  zen3-cezanne
x25519/lib25519-20240321/command/: ed25519-keypair.c  ed25519-open.c  ed25519-sign.c  freadall.inc  x25519-dh.c  x25519-keypair.c
x25519/lib25519-20240321/compilers/: amd64+sse3+ssse3+sse41+sse42+avx+bmi1+bmi2+avx2+adx+avx512f+avx512vl+avx512ifma  amd64+sse3+ssse3+sse41+sse42+avx+bmi1+bmi2+avx2+adx+sse4a+vaes.c  amd64+sse3+ssse3+sse41+sse42+avx+bmi1+bmi2+avx2+adx+sse4a.c  amd64+sse3+ssse3+sse41+sse42+avx+bmi1+bmi2+avx2+adx+vaes+waitpkg.c
x25519/lib25519-20240321/dispatch/: ifunc-test.c  ifunc.do
(+346 files in other folders)
